2012-04-26  Benjamin Poulain  <bpoulain@apple.com>

        ObjcClass::methodsNamed() can leak if buffer is dynamically allocated
        https://bugs.webkit.org/show_bug.cgi?id=84668

        Reviewed by Alexey Proskuryakov.

        Extend the test coverage to accessor with very long name. Add coverage for the
        JavaScript to Objective-C method name conversion.

        * platform/mac/plugins/bindings-objc-long-method-name-expected.txt: Added.
        * platform/mac/plugins/bindings-objc-long-method-name.html: Added.
        * platform/mac/plugins/bindings-objc-method-name-conversion-expected.txt: Added.
        * platform/mac/plugins/bindings-objc-method-name-conversion.html: Added.

2012-04-26  Dimitri Glazkov  <dglazkov@chromium.org>

        [Chromium] media/video-currentTime-set.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=85003

        * platform/chromium/test_expectations.txt: Added expectation of flakiness.

2012-04-26  Robert Hogan  <robert@webkit.org>

        Unreviewed, rolling out r115342.
        http://trac.webkit.org/changeset/115342

        r115340 was rolled out

        * platform/qt/test_expectations.txt:

2012-04-26  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r115349.
        http://trac.webkit.org/changeset/115349

        Patch that required this change was reverted.

        * platform/chromium/test_expectations.txt:

2012-04-26  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r115340.
        http://trac.webkit.org/changeset/115340
        https://bugs.webkit.org/show_bug.cgi?id=83048

        Does not work with Windows.

        * css2.1/20110323/abspos-containing-block-initial-004-ref-expected.png: Added.
        * css2.1/20110323/abspos-containing-block-initial-004-ref-expected.txt: Added.
        * css2.1/20110323/abspos-containing-block-initial-004a-expected.png: Added.
        * css2.1/20110323/abspos-containing-block-initial-004a-expected.txt: Added.