@@ -1,0 +1,3 @@
+This calling deleteFromDocument after document.open. WebKit should not crash.
+PASS
+
